--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -35,6 +35,11 @@ jobs:
     - name: Run Postman Collection
       run: postman collection run SDET_API.postman_collection.json --environment SDET_API_QA.postman_environment.json -r json,html --reporter-json-omitHeaders --reporter-json-omitResponseBodies || true
         
+    - name: Prepare HTML Report for GitHub Pages
+      if: always()
+      run: |
+        cp postman-cli-reports/*.html postman-cli-reports/index.html
+        
     - name: Upload Test Reports
       if: always()
       uses: actions/upload-artifact@v4
